--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
      <!--here is where we add in our order items-->
   </form>
 
-<p>Subtotal: $10</p> <!--starting at 10 bc thats what default load is-->
+<p>Subtotal: $<span id="subtotalCounter">10</span></p> <!--starting at 10 bc thats what default load is-->
 <!--test area-->
 <p><strong>--- TEST AREA BELOW ---</strong></p>
 <!--
